test/expected/define_ns_c_ns_c.out
define D of namespace C of namespace N as class D
         ^
10: error: "N::C" was previously declared as "class" ("namespace N { class C; }")
